# VDT-Agent

./: .env.sample  .gitignore  agent.py  cli.py  docker-compose.yml  elk-docker-compose.yaml  graph.ipynb  main.py  mcp_server.py  pyproject.toml  requirements.txt  workflow.py
.github/workflows/: format.yml
agent/: __init__.py  executor.py  graph.py  interruptor.py  planner.py  replanner.py  searcher.py  summarizer.py  supervisor.py  translator.py  workflow.py  workflow_v2.py
api/: config.py  main.py  models.py
api/routes/: __init__.py  chat.py
api/services/: __init__.py  chat.py
app/: config.py  models.py
app/routes/: chat.py
app/services/: chat.py
cli/: cli.py
retriever/: config.yaml  connect.py  ingest.py  query.py
tools/: __init__.py  handoff.py  init_tools.py  interruptor.py  mcp_server.py  retriever.py
tools/rag/: __init__.py  connect.py  ingest.py  query.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.vue
ui/src/components/: AlertBox.vue  ChatBox.vue  ChatInput.vue  ChatMessages.vue  ChatSidebar.vue  LoadingIndicator.vue  MessageBubble.vue  SendButton.vue  SideBar.vue  StatusIndicator.vue  UserAvatar.vue  WelcomeScreen.vue
utils/: gen_image.py
